@@ -42,6 +42,12 @@
 
   <dt>v. attribute:</dt> <dd>to regard as a characteristic or quality of a person or thing, including a cause effect relationship.  Syn. ascribe, impute.</dd>
 
+  <dt><a name="biomimetic">adj. biomimetic:</a></dt> <dd>measurably resembling multiple aspects of a referent biological system.</dd>
+
+  <dt><a name="biomimetic analog">n. biomimetic analog:</a></dt> <dd>an <a href="#analog">analog</a> aspiring to emulate aspects (including phenomenal, componential, causal, and organizational) of a referent biological system.</dd>
+
+  <dt><a name="biomimicry">n. biomimicry:</a></dt> <dd>the emulation or imitation of aspects of a referent biological system, usually for a particular scientific or engineering purpose; an instance of being <a href="#biomimetic">biomimetic</a>.</dd>
+
   <dt><a name="bisimulation">n. bisimulation</a></dt> <dd>two modules whose state transitions are identical.  This is the dual of <a href="#congruence" target="_blank">congruence</a>.</dd>
 
   <dt><a name="calibration">n. calibration:</a></dt> <dd>the confirmation of and/or adjustment to parameters such that standard inputs result in standard outputs.</dd>
@@ -191,6 +197,8 @@
   </dd>
 
   <dt><a name="petitio principii">n. petitio principii:</a></dt> <dd>the deductive logical fallacy of inferring a conclusion that is already stated as an assumption; "begging the question".</dd>
+
+  <dt><a name="physiomimetic">adj. physiomimetic:</a></dt> <dd>measurably resembling multiple aspects of referent physiology.</dd>
 
   <dt><a name="plectics">n. plectics:</a></dt> <dd>the study of the separability of a system into constituent parts and the relationships between systemic and constituent phenomena.
     <br>Notes: Plectics was coined by Dr. Murray Gell-Mann in "Let's Call It Plectics", an article in Complexity Vol. 1, No. 5, 1996.  In that article, he states that the words "simple" and "complex" both descend from the Indo-European root "plek-".  Using it directly neatly avoids the cardinality that "simple", denoting 1, and "complex", denoting more than 1, specify.  This makes it more appropriate as a moniker for studying the complexity, or lack thereof, of systems.
